--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="progress-bar">
                         <div class="progress-bar-value"></div>
                     </div>
-                    <p class="player-progress-timer"><span id="timer">30</span>"</p>
+                    <p class="player-progress-timer"><span id="timer">10</span>"</p>
                 </div>
                 <p class="player-score">0<span id="score"></span><span>pt</span></p>
 
@@ -31,20 +31,21 @@
             <section>
                 <ul class="list">
                     <li class="list-itm">
-                        <button class="list-btn">Artiste 1 - Chanson</button>
+                        <button data-meta="" class="list-btn js-button-responses">Artiste 1 - Chanson</button>
                     </li>
                     <li class="list-itm">
-                        <button class="list-btn">Artiste 2 - Chanson</button>
+                        <button class="list-btn js-button-responses">Artiste 2 - Chanson</button>
                     </li>
                     <li class="list-itm">
-                        <button class="list-btn">Artiste 3 - Chanson</button>
+                        <button class="list-btn js-button-responses">Artiste 3 - Chanson</button>
                     </li>
                     <li class="list-itm">
-                        <button class="list-btn">Artiste 4 - Chanson</button>
+                        <button class="list-btn js-button-responses">Artiste 4 - Chanson</button>
                     </li>
                 </ul>
             </section>
         </main>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
