add playlist data sample

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section id="player"> 
                 <div class="player-progression">
                     <div class="progress-bar">
-                        <div class="progress-bar-value"></div>
+                        <div data-progress="10" class="progress-bar-value js-progress-value"></div>
                     </div>
                     <p class="player-progress-timer"><span id="timer">10</span>"</p>
                 </div>
