fill page with sample data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
             <a href="#"><img class="header-cross" src="img/Cross.svg"></img></a>
-            <h1 class="header-playlist-name">Années 2000</h1>
+            <h1 class="header-playlist-name js-playlist-name">Nom de playlist</h1>
             <div class="songs-progress"><span id="">1</span>/10</div>
         </header>
         <main class="">
