v1 calcul of Score, bug with a minus Score, need to add a stop

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <p class="player-progress-timer"><span id="timer">10</span>"</p>
                 </div>
-                <p class="player-score">0<span id="score"></span><span>pt</span></p>
+                <p class="player-score"><span id="score">0</span><span>pt</span></p>
 
                 <!-- <div class="progress-circle">
                     <div class="progress-mask"></div>
