beginning of home page in static html

--- a/home.html
+++ b/home.html
@@ -9,18 +9,218 @@
 <body>
     <header class="header">
         <div class="header__brand">
-            <img class='header__brand__img' src="" alt="">
-            <h1 class="header__brand_title">Musiquiz</h1>
+            <img class='header__brand__img' src="img/logo-l.png" alt="">
+            <h1 class="header__brand__title">Musiquiz</h1>
         </div>
+        <!--mettre <nav>-->
+        <ul class="header__nav">
+            <li class="header__nav__itm">Toutes les rooms</li>
+            <li class="header__nav__itm">Mon Compte</li>
+        </ul>
     </header>
 
-    <main>
-        <section>
-            <h2>Top 3</h2>
-            <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+    <main class="main container">
+        <section id="popular-rooms" class="block__section">
+            <h2 class="block__section__title">Top 3</h2>
+            <ul class="block__section__list">
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">1</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">2</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
+                <li class="block__section__list__itm">
+                    <!--article ?-->
+                    <article class="block__section__list__itm--wrapper">
+                        <h4 class="block__section__list__itm__title">3</h4>
+                        <div class="tile">
+                            <a href='#' class="tile__left">
+                                <img class="tile__img" src="img/Icone Player.svg" alt="">
+                            </a>
+                            <div class="tile__right">
+                                <div class="tile__right--layer">    
+                                </div>
+                                <img src="img/cup.svg" alt="">
+                                <div class="tile__right__content">
+                                    <p>User_1425</p>
+                                    <p>1000pts</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <p class="tile__label">Années 80</p>
+
+                </li>
             </ul>
         </section>
     </main>
