--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a href="#"><img class="header-cross" src="img/Cross.svg"></img></a>
+            <a href="home.php"><img class="header-cross" src="img/Cross.svg"></img></a>
             <h1 class="header-playlist-name js-playlist-name">Nom de playlist</h1>
             <div class="songs-progress"><span id="">1</span>/10</div>
         </header>
