--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,13 +15,18 @@
             <div class="songs-progress"><span id="">1</span>/10</div>
         </header>
         <main class="">
-            <section id="player"> 
+            <section id="player" class = "section-player"> 
                 <div class="player-progression">
                     <div class="progress-bar">
                         <div data-progress="10" class="progress-bar-value js-progress-value"></div>
                     </div>
                     <p class="player-progress-timer"><span id="timer">10</span>"</p>
                 </div>
+                <audio id="musicplayer" autoplay>
+                    <source src="https://cdns-preview-e.dzcdn.net/stream/c-e77d23e0c8ed7567a507a6d1b6a9ca1b-11.mp3" />
+                </audio>
+                  
+
                 <p class="player-score"><span id="score">0</span><span>pt</span></p>
 
                 <!-- <div class="progress-circle">
