api-call structure to get Data

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <a href="home.php"><img class="header-cross" src="img/Cross.svg"></img></a>
             <h1 class="header-playlist-name js-playlist-name">Nom de playlist</h1>
-            <div class="songs-progress"><span id="">1</span>/10</div>
+            <div class="songs-progress"><span class="current-round">1</span>/<span class = "total-round">10</span></div>
         </header>
         <main class="">
             <section id="player" class = "section-player"> 
