--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <p class="player-progress-timer"><span id="timer">10</span>"</p>
                 </div>
-                <audio id="musicplayer" autoplay>
+                <audio id="musicplayer">
                     <source src="https://cdns-preview-e.dzcdn.net/stream/c-e77d23e0c8ed7567a507a6d1b6a9ca1b-11.mp3" />
                 </audio>
                   
